# im

./: CMakeLists.txt  dist.info
cmake/: FindDirectShow.cmake  FindECW.cmake
doc/html/: style.css
doc/html/download/: config_lua_module  install_dev
doc/html/en/: building.html  buildwin.html  capture.html  capture_samples.html  guide.html  history.html  libjpeg.txt  proc_guide.html  proc_samples.html  rep_samples.html  samples.html  storage_samples.html  to_do.html  toolkits.html
doc/html/en/doxygen/: classimAttribTable.html  classimBinFileBase.html  classimFileFormatBase__inherit__graph.md5  classimFormat.html  classimImageFile.html  classimImageFile__coll__graph.map  functions.html  functions_vars.html  globals_0x65.html  globals_0x70.html  globals_enum.html  globals_func.html  globals_func_0x63.html  globals_func_0x64.html  globals_func_0x69.html  globals_func_0x6d.html  globals_func_0x70.html  graph_legend.html  group__analyze.html  group__arithm.md5  group__avi.html  group__binfile.html  group__capture.map  group__capture.md5  group__color.html  group__color.map  group__colorutl.md5  group__compress.md5  group__convolve.html  group__convolve.map  group__cpx.html  group__dib.md5  group__ecw.md5  group__effects.html  group__effects.md5  group__file.html  group__file.map  group__file.md5  group__filesdk.map  group__format.html  (+93 more)
doc/html/examples/: 1frame_avi.lua  canny.lua  combine4-10x15.lua  copyplane.lua  hough_lines.lua  im_info.cpp  info_serialize.lua  makevideo.lua  memfile.cpp  merge_rgb.lua  proc_fourier.cpp  process.lua  process_new.lua  videocapture.wlua  view_image.wlua
doc/html/wb/: wb_en.hhp  wb_tree_en.hhc
dox/: im.dox
include/: im_complex.h  im_format_all.h
resources/: im.def  im_process.def  imlua.def  imlua_process.def
share/im/doc/: im-3.8_Docs.chm
share/im/doc/html/: index.html  style.css  wb_search.txt  wb_title.html  wb_tree.html
share/im/doc/html/download/: install
share/im/doc/html/en/: building.html  buildwin.html  capture.html  capture_guide.html  capture_samples.html  copyright.html  cvs.html  download.html  download_tips.html  guide.html  history.html  home.html  imlua.html  proc_guide.html  proc_samples.html  processing.html  prod.html  rep_guide.html  rep_samples.html  representation.html  samples.html  storage.html  storage_guide.html  storage_samples.html  to_do.html  toolkits.html
share/im/doc/html/en/doxygen/: annotated.html  classes.html  classimAttribArray.html  classimCapture.html  classimFileFormatBase.html  classimFileFormatBase__coll__graph.map  classimFileFormatBase__coll__graph.md5  classimFileFormatBase__inherit__graph.map  classimImageFile__coll__graph.map  classimImageFile__coll__graph.md5  classimcfloat.html  files.html  functions_func.html  globals.html  globals_0x63.html  globals_0x64.html  globals_0x69.html  globals_0x6c.html  globals_0x6d.html  globals_0x73.html  globals_defs.html  globals_eval.html  globals_func_0x65.html  globals_func_0x6c.html  globals_func_0x73.html  globals_type.html  group__analyze.md5  group__arithm.html  group__avi.md5  group__bin.html  group__bin.md5  group__binfile.md5  group__bmp.html  group__bmp.md5  group__capture.html  group__capture.map  group__cnvutil.html  group__cnvutil.md5  group__color.map  group__color.md5  (+220 more)
share/im/doc/html/examples/: 1frame_avi.lua  canny.lua  copyplane.lua  getpalette.lua  glut_capture.c  hdtv_resize.lua  hough_lines.lua  im_copy.cpp  im_paint.c  info_serialize.lua  memfile.cpp  proc_fourier.cpp  process.lua  process_new.lua  rotate_transparent.lua  show_image_touch.wlua  sobel.lua  stats.lua  videocapture.wlua  view.wlua  viewGL.wlua  view_image.wlua
share/im/doc/html/wb/: wb_en.hhp  wb_tree_en.hhc  wb_usr.lua
src/libtiff/: t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_config.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_version.c  tif_warning.c  tif_write.c  tif_zip.c  tiff.h  (+3 more)
src/lua5/imlua/: imlua_module.c
src/lua5/libimlua/: imlua.c  imlua_aux.c  imlua_aux.h  imlua_convert.c  imlua_file.c  imlua_image.c  imlua_palette.c  imlua_palette.h  imlua_util.c
src/lua5/libimlua/lh/: im_convert.lh  im_image.lh
src/lua5/modules/: imlua_avi.c  imlua_capture.c  imlua_fftw.c  imlua_image.h  imlua_jp2.c  imlua_wmv.c
src/lua5/modules/lh/: im_fftw.lh  im_process.lh  im_processconvert.lh
src/lua5/modules/process/: imlua_kernel.c  imlua_process.c
